// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

package dataControllerUtils.protobuf;

message FMDDocumentProperty {
extensions 3 to 106;
        required string key = 1;
        required string value = 2;
}